--- a/index.html
+++ b/index.html
@@ -13,70 +13,51 @@
       border: 1px solid #ccc;
       border-radius: 10px;
     }
-    input, textarea, select, button {
+    input, textarea, button {
       width: 100%;
-      padding: 8px;
+      padding: 10px;
       margin: 10px 0;
       font-size: 16px;
+    }
+    button.kadry {
+      background-color: #444;
+      color: white;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
+
   <h2>Wniosek urlopowy</h2>
+
   <form id="vacationForm">
     <label for="name">Imię i nazwisko</label>
-    <input list="names" id="name" name="name" required />
-    <datalist id="names">
-      <option value="Paweł Ruchlicki" />
-      <option value="Karolina Krupiewska" />
-      <option value="Jan Kowalski" />
-      <option value="Anna Nowak" />
-    </datalist>
+    <input type="text" id="name" required>
 
     <label for="start">Data rozpoczęcia</label>
-    <input type="date" id="start" name="start" required />
+    <input type="date" id="start" required>
 
     <label for="end">Data zakończenia</label>
-    <input type="date" id="end" name="end" required />
+    <input type="date" id="end" required>
 
     <label for="reason">Powód (opcjonalnie)</label>
-    <textarea id="reason" name="reason" rows="3"></textarea>
+    <textarea id="reason" rows="3"></textarea>
 
     <button type="submit">Wyślij wniosek</button>
   </form>
 
   <p id="message"></p>
 
+  <button class="kadry" onclick="window.location.href='login.html'">Przejdź do kadr</button>
+
   <script>
     const form = document.getElementById('vacationForm');
     const message = document.getElementById('message');
 
-    form.addEventListener('submit', async (e) => {
+    form.addEventListener('submit', function(e) {
       e.preventDefault();
-
-      const formData = {
-        name: form.name.value,
-        start: form.start.value,
-        end: form.end.value,
-        reason: form.reason.value,
-      };
-
-      try {
-        const res = await fetch('https://twoj-backend-url.com/api/submit', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(formData),
-        });
-
-        if (res.ok) {
-          message.textContent = '✅ Wniosek został wysłany.';
-          form.reset();
-        } else {
-          message.textContent = '❌ Wystąpił błąd przy wysyłaniu.';
-        }
-      } catch (err) {
-        message.textContent = '❌ Błąd połączenia z serwerem.';
-      }
+      message.textContent = "✅ Wniosek został zapisany lokalnie (na razie demo).";
+      form.reset();
     });
   </script>
 </body>
