--- a/kadry.html
+++ b/kadry.html
@@ -2,44 +2,178 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>Panel kadrowy</title>
+  <title>Kadry – Zarządzanie</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 600px;
-      margin: 30px auto;
       padding: 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+    h2 {
+      margin-top: 30px;
+    }
+    .hidden {
+      display: none;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+    th, td {
       border: 1px solid #ccc;
-      border-radius: 10px;
+      padding: 6px;
+      text-align: left;
     }
     input, button {
-      padding: 10px;
-      margin: 5px 0;
+      padding: 8px;
+      margin-top: 10px;
+      margin-bottom: 5px;
       width: 100%;
-      font-size: 16px;
     }
-    .pracownik {
+    .tab-btns {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-bottom: 1px solid #ddd;
-      padding: 5px 0;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+    .tab-btns button {
+      flex: 1;
     }
   </style>
 </head>
 <body>
-  <h2>Panel kadrowy</h2>
+  <h1>Panel Kadrowy</h1>
 
-  <div id="panelKadrowy" style="display: none;">
-    <h3>➕ Dodaj pracownika</h3>
-    <input type="text" id="noweImie" placeholder="Imię i nazwisko">
-    <input type="number" id="urlopy" placeholder="Liczba dni urlopu">
-    <button onclick="dodajPracownika()">Dodaj</button>
-
-    <h3>📋 Lista pracowników</h3>
-    <div id="listaPracownikow"></div>
+  <div class="tab-btns">
+    <button onclick="pokazZakladke('pracownicy')">📋 Lista pracowników</button>
+    <button onclick="pokazZakladke('wnioski')">📄 Wnioski urlopowe</button>
   </div>
 
-  <script src="main.js"></script>
+  <!-- Zakładka: Pracownicy -->
+  <div id="zakladka-pracownicy">
+    <h2>Lista pracowników</h2>
+    <input type="text" id="noweImie" placeholder="Imię i nazwisko">
+    <button onclick="dodajPracownika()">➕ Dodaj pracownika</button>
+    <table id="tabelaPracownikow">
+      <thead>
+        <tr><th>Imię i nazwisko</th><th>Pozostało dni urlopu</th><th>Usuń</th></tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+
+  <!-- Zakładka: Wnioski -->
+  <div id="zakladka-wnioski" class="hidden">
+    <h2>Wnioski urlopowe</h2>
+    <table id="tabelaWnioski">
+      <thead>
+        <tr><th>Imię i nazwisko</th><th>Od</th><th>Do</th><th>Liczba dni</th><th>Pozostało</th></tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+
+  <script>
+    const DOM = {
+      zakPracownicy: document.getElementById("zakladka-pracownicy"),
+      zakWnioski: document.getElementById("zakladka-wnioski"),
+      tabelaPrac: document.querySelector("#tabelaPracownikow tbody"),
+      tabelaWnioski: document.querySelector("#tabelaWnioski tbody")
+    };
+
+    const BAZA_URL = 20;
+
+    function pokazZakladke(nazwa) {
+      DOM.zakPracownicy.classList.add("hidden");
+      DOM.zakWnioski.classList.add("hidden");
+      if (nazwa === "pracownicy") DOM.zakPracownicy.classList.remove("hidden");
+      else DOM.zakWnioski.classList.remove("hidden");
+      odswiez();
+    }
+
+    function pobierzPracownikow() {
+      return JSON.parse(localStorage.getItem("pracownicy") || "[]");
+    }
+
+    function zapiszPracownikow(lista) {
+      localStorage.setItem("pracownicy", JSON.stringify(lista));
+    }
+
+    function dodajPracownika() {
+      const imie = document.getElementById("noweImie").value.trim();
+      if (!imie) return;
+      const lista = pobierzPracownikow();
+      if (lista.some(p => p.imie === imie)) return alert("Taki pracownik już istnieje.");
+      lista.push({ imie: imie, urlop: BAZA_URL });
+      zapiszPracownikow(lista);
+      document.getElementById("noweImie").value = "";
+      odswiez();
+    }
+
+    function usunPracownika(imie) {
+      if (!confirm(`Na pewno usunąć ${imie}?`)) return;
+      let lista = pobierzPracownikow();
+      lista = lista.filter(p => p.imie !== imie);
+      zapiszPracownikow(lista);
+      odswiez();
+    }
+
+    function pobierzWnioski() {
+      return JSON.parse(localStorage.getItem("wnioski") || "[]");
+    }
+
+    function liczDniOdDo(start, end) {
+      const d1 = new Date(start);
+      const d2 = new Date(end);
+      const diff = Math.floor((d2 - d1) / (1000 * 60 * 60 * 24)) + 1;
+      return diff > 0 ? diff : 0;
+    }
+
+    function odswiez() {
+      // Pracownicy
+      const pracownicy = pobierzPracownikow();
+      const wnioski = pobierzWnioski();
+
+      DOM.tabelaPrac.innerHTML = "";
+      pracownicy.forEach(p => {
+        const zajete = wnioski
+          .filter(w => w.imie === p.imie)
+          .reduce((sum, w) => sum + liczDniOdDo(w.start, w.end), 0);
+        const pozostalo = BAZA_URL - zajete;
+
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td>${p.imie}</td>
+          <td>${pozostalo} dni</td>
+          <td><button onclick="usunPracownika('${p.imie}')">🗑️</button></td>
+        `;
+        DOM.tabelaPrac.appendChild(tr);
+      });
+
+      // Wnioski
+      DOM.tabelaWnioski.innerHTML = "";
+      wnioski.forEach(w => {
+        const dni = liczDniOdDo(w.start, w.end);
+        const prac = pracownicy.find(p => p.imie === w.imie);
+        const pozostalo = prac ? BAZA_URL - wnioski
+          .filter(x => x.imie === w.imie)
+          .reduce((sum, x) => sum + liczDniOdDo(x.start, x.end), 0) : "-";
+
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td>${w.imie}</td>
+          <td>${w.start}</td>
+          <td>${w.end}</td>
+          <td>${dni}</td>
+          <td>${pozostalo}</td>
+        `;
+        DOM.tabelaWnioski.appendChild(tr);
+      });
+    }
+
+    // Inicjalizacja
+    pokazZakladke("pracownicy");
+  </script>
 </body>
 </html>
