--- a/kadry.html
+++ b/kadry.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Panel Kadrowy</title>
   <style>
     body { font-family: Arial; margin: 20px; }
@@ -23,7 +23,6 @@
     <button onclick="pokazZakladke('wnioski')">📄 Wnioski urlopowe</button>
   </div>
 
-  <!-- Zakładka pracownicy -->
   <div id="zakladka-pracownicy">
     <h2>Dodaj pracownika</h2>
     <div class="row">
@@ -47,7 +46,6 @@
     </table>
   </div>
 
-  <!-- Zakładka wnioski -->
   <div id="zakladka-wnioski" class="hidden">
     <h2>Wnioski urlopowe</h2>
     <table id="tabelaWnioski">
@@ -59,6 +57,7 @@
 <script>
 let pracownicy = JSON.parse(localStorage.getItem("pracownicy") || "[]");
 let wnioski = JSON.parse(localStorage.getItem("wnioski") || "[]");
+let menedzerowieLoginy = JSON.parse(localStorage.getItem("menedzerowieLoginy") || "[]");
 
 function pokazZakladke(nazwa) {
   document.getElementById("zakladka-pracownicy").classList.add("hidden");
@@ -115,6 +114,8 @@ function dodajPracownika() {
   if (rola === "Menedżer") {
     const login = imie.toLowerCase().replace(/\s+/g, "");
     const haslo = "haslo123";
+    menedzerowieLoginy.push({ login, haslo, imie });
+    localStorage.setItem("menedzerowieLoginy", JSON.stringify(menedzerowieLoginy));
     alert(`✅ Utworzono konto menedżera\nLogin: ${login}\nHasło: ${haslo}`);
   }
 
