--- a/index.html
+++ b/index.html
@@ -2,19 +2,41 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Wnioski urlopowe</title>
+  <title>Wniosek urlopowy</title>
   <style>
-    body { font-family: Arial; margin: 40px; background-color: #f0f0f0; }
-    .container { max-width: 600px; margin: auto; background: white; padding: 30px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    input, select, button { width: 100%; padding: 10px; margin: 10px 0; }
-    h2 { text-align: center; }
+    body {
+      font-family: Arial;
+      background-color: #f4f4f4;
+      padding: 40px;
+    }
+    .container {
+      max-width: 600px;
+      background: white;
+      margin: auto;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    input, select, button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      margin-bottom: 20px;
+    }
+    h2 {
+      text-align: center;
+    }
+    button {
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <h2>Wniosek urlopowy</h2>
+
     <label for="nazwisko">Imię i nazwisko:</label>
-    <input type="text" id="nazwisko" list="listaPracownikow" placeholder="Wpisz swoje nazwisko">
+    <input type="text" id="nazwisko" list="listaPracownikow" placeholder="Wpisz swoje imię i nazwisko">
     <datalist id="listaPracownikow"></datalist>
 
     <label for="od">Data od:</label>
@@ -24,20 +46,21 @@
     <input type="date" id="do">
 
     <button onclick="zlozWniosek()">Wyślij wniosek</button>
-    <a href="kadry_login.html"><button>Przejdź do kadr</button></a>
+    <a href="kadry_login.html"><button type="button">Przejdź do kadr</button></a>
   </div>
 
   <script>
-    // Inicjalizacja przykładowych pracowników, jeśli ich nie ma
+    // Inicjalizacja przykładowych danych, jeśli brak
     if (!localStorage.getItem("pracownicy")) {
       const pracownicy = [
         { imie: "Jan Kowalski", typ: "spedytor", menedzer: "Pisarczyk Paweł", urlopy: [], dniUrlopu: 20 },
-        { imie: "Anna Nowak", typ: "spedytor", menedzer: "Pisarczyk Paweł", urlopy: [], dniUrlopu: 20 },
-        { imie: "Karol Zieliński", typ: "spedytor", menedzer: "Wróblewski Hubert", urlopy: [], dniUrlopu: 20 }
+        { imie: "Anna Nowak", typ: "spedytor", menedzer: "Wróblewski Hubert", urlopy: [], dniUrlopu: 20 },
+        { imie: "Karol Zieliński", typ: "spedytor", menedzer: "Nowikow Dariusz", urlopy: [], dniUrlopu: 20 }
       ];
       localStorage.setItem("pracownicy", JSON.stringify(pracownicy));
     }
 
+    // Wypełnianie datalisty nazwisk
     const lista = JSON.parse(localStorage.getItem("pracownicy")) || [];
     const datalist = document.getElementById("listaPracownikow");
     lista.forEach(p => {
@@ -60,7 +83,7 @@
       const osoba = pracownicy.find(p => p.imie === nazwisko);
 
       if (!osoba) {
-        alert("Taki pracownik nie istnieje.");
+        alert("Nie znaleziono pracownika o tym nazwisku.");
         return;
       }
 
@@ -71,8 +94,12 @@
       }
 
       osoba.urlopy.push({ od: dataOd, do: dataDo, status: "oczekuje" });
+      osoba.dniUrlopu -= dniWolne;
+
       localStorage.setItem("pracownicy", JSON.stringify(pracownicy));
-      alert("Wniosek złożony pomyślnie!");
+      alert("Wniosek urlopowy złożony!");
+      
+      // Resetowanie formularza
       document.getElementById("nazwisko").value = "";
       document.getElementById("od").value = "";
       document.getElementById("do").value = "";
